------------------------------------------------------------------------
r1346 | dahnke | 2018-08-02 11:42:33

Changed paths:
M       CHANGES.txt
M       cat12.m
M       cat_main.m

(1) Fixed:  Corrected colorbar in other figure printing bug in cat_main.
------------------------------------------------------------------------
r1345 | gaser | 2018-08-02 11:37:11 +0200 (Do, 02 Aug 2018) | 12 lines

Changed paths:
M       CHANGES.txt
M       Contents.m
M       cat_conf_tools.m
M       cat_defaults.m
MM      cat_stat_check_cov2.m
M       html/cat.html

(1) Changed: Added Eulcer number and size of topology defects to 
    cat_stat_check_cov2.m
(2) Fixed: Typos

------------------------------------------------------------------------
r1344 | dahnke | 2018-08-02 11:13:13 +0200 (Do, 02 Aug 2018) | 6 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m

(1) Fixed:  Small changes to correct and optimize other calls of clean_gwc.

------------------------------------------------------------------------
r1343 | dahnke | 2018-08-02 10:41:03 +0200 (Do, 02 Aug 2018) | 26 lines

Changed paths:
M       CHANGES.txt
M       cat_main.m
M       cat_run_job.m
M       cat_run_job1070.m
M       cat_stat_check_cov.m
A       cat_stat_check_cov2.m
M       cat_vol_sanlm.m

(1) Fixed:  Corrected the optimized call of cleanup in SPM Preprocessing 2  
            that strongly influence the skull-stripping of CAT.
            Thanks to Ying-Liang Lai for pointing out that issue.
(2) Fixed:  Corrected bug in runtime estimation that avoid counting of 
            early processing steps in cat_run_job(1070).            
(3) New:    Added alpha version of cat_stat_check_cov2 that is called from 
            cat_stat_check_cov in the development user mode. Although it 
            based on the previous version it include large changes: 
             - automatic detection of XML and other report files
             - group-specific symbols and legend in Mahalanobis plot 